--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,9 +7,9 @@ spring:
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: update
-#  profiles:
-#    active: demo
+      ddl-auto: create-drop
+  profiles:
+    active: demo
 
 server:
   port: 8080
